Like Tabs commit with Popup.js code

--- a/popup.html
+++ b/popup.html
@@ -37,18 +37,18 @@
     <img id="LikeTabsLogo" class= "titleLogoElement" src="./images/LikeTabsLogo.png">
     <h1 id="LikeTabsTitle" class= "titleLogoElement">Like Tabs</h1>
   </div>
-  <div id="browserActionMenu" onclick="ClickFun()">
-    <div class="subActionMenu">Close all</div>
-    <div  class="subActionMenu">Close other</div>
+  <div id="browserActionMenu">
+    <div id = "CloseAll_ID" class="subActionMenu">Close all</div>
+    <div  id = "Close_OTHER_ID" class="subActionMenu">Close other</div>
     <hr>
-    <div  class="subActionMenu">Reload all</div>
-    <div  class="subActionMenu"> Reload other</div>
+    <div id= "ReloadAll_ID" class="subActionMenu">Reload all</div>
+    <div  id = "Reload_OTHER_ID" class="subActionMenu"> Reload other</div>
     <hr>
-    <div  class="subActionMenu">Mute all</div>
-    <div  class="subActionMenu">Mute other</div>
+    <div id="MuteAll_Id" class="subActionMenu">Mute all</div>
+    <div  id = "Mute_Other_Id" class="subActionMenu">Mute other</div>
     <hr>
-    <div  class="subActionMenu">Unmute all</div>
-    <div  class="subActionMenu">Unmute other</div>
+    <div  id = "UnmuteAll_Id" class="subActionMenu">Unmute all</div>
+    <div  id = "Unmute_Other_Id" class="subActionMenu">Unmute other</div>
   </div>
 </div> 
     <script src="popup.js"></script>
