Like Tabs code clean up

--- a/popup.html
+++ b/popup.html
@@ -38,17 +38,17 @@
     <h1 id="LikeTabsTitle" class= "titleLogoElement">Like Tabs</h1>
   </div>
   <div id="browserActionMenu">
-    <div id = "CloseAll_ID" class="subActionMenu">Close all</div>
-    <div  id = "Close_OTHER_ID" class="subActionMenu">Close other</div>
+    <div id = "CLOSE_ALL" class="subActionMenu">Close all</div>
+    <div  id = "CLOSE_OTHER" class="subActionMenu">Close other</div>
     <hr>
-    <div id= "ReloadAll_ID" class="subActionMenu">Reload all</div>
-    <div  id = "Reload_OTHER_ID" class="subActionMenu"> Reload other</div>
+    <div id= "RELOAD_ALL" class="subActionMenu">Reload all</div>
+    <div  id = "RELOAD_OTHER" class="subActionMenu"> Reload other</div>
     <hr>
-    <div id="MuteAll_Id" class="subActionMenu">Mute all</div>
-    <div  id = "Mute_Other_Id" class="subActionMenu">Mute other</div>
+    <div id="MUTE_ALL" class="subActionMenu">Mute all</div>
+    <div  id = "MUTE_OTHER" class="subActionMenu">Mute other</div>
     <hr>
-    <div  id = "UnmuteAll_Id" class="subActionMenu">Unmute all</div>
-    <div  id = "Unmute_Other_Id" class="subActionMenu">Unmute other</div>
+    <div  id = "UNMUTE_ALL" class="subActionMenu">Unmute all</div>
+    <div  id = "UNMUTE_OTHER" class="subActionMenu">Unmute other</div>
   </div>
 </div> 
     <script src="popup.js"></script>
